--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
-title: "My Blogs Name"
-author: "Default Author Name"
-description: "Some short description of your blog can go here." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+title: "Masum Notes Lite"
+author: "Masum Ahmed"
+description: "Nothing to sayb right now and please no worry thinking about description"
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
-email: "example@mail.com"
-twitter_username: "twitteruser"
-github_username: "githubuser"
-linkedin_username: "linkedinuser"
-#facebook_username: username
+email: "mail@masum.uk"
+twitter_username: "withmasum"
+github_username: "withmasum"
+linkedin_username: "withmasum"
+#facebook_username: withmasum
 #flickr_username: username
-#instagram_username: username
+#instagram_username: withmasum
 #pinterest_username: username
 #youtube_username: username
 #googleplus_username: +username
